@@ -1,6 +1,7 @@
 0.1.1 
 
-* correct guessing of "shebang" line position (should be 0)
+* various fixes concerning running inline code
+* added code to support integration with Outthentic version 0.1.*
 
 0.1.0 2016-04-21
 
